Closed Bug 1919894 Opened 2 days ago Closed 2 days ago

GIFFT mapping of event `value` treats a value of "" the same as undefined/null

Categories

(Toolkit :: Telemetry, defect, P1)

defect

Tracking

()

RESOLVED FIXED
132 Branch
Tracking Status
firefox132 --- fixed

People

(Reporter: chutten, Assigned: chutten)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

In bug 1894530 we added support for mapping a value extra to the telemetry value parameter for GIFFT-mapped event metrics. Alas, it treats an empty-string value for value as though it's not present at all.

Pushed by fqueze@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/fd3b2de6d056 Allow empty values in GIFFT-mapped events r=florian
Status: ASSIGNED → RESOLVED
Closed: 2 days ago
Resolution: --- → FIXED
Target Milestone: --- → 132 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: