Bug 1919894 - Allow empty values in GIFFT-mapped events r=florian

Differential Revision: https://phabricator.services.mozilla.com/D222868